# examples

./: .pdm.toml  0_bad.py  1_current.py  2_better_root.py  3_better_module.py  4_np_logging.py  README.md  logging.drawio  pyproject.toml
src/examples/: a.py  main.py
